--- a/web/start/package.json
+++ b/web/start/package.json
@@ -22,11 +22,13 @@
         "css-loader": "^6.0.0",
         "cssnano": "^5.1.12",
         "elm": "^0.19.1-5",
+        "elm-asset-webpack-loader": "^1.1.3",
         "elm-format": "^0.8.5",
         "elm-hot-webpack-loader": "^1.1.8",
         "elm-tailwind-modules": "^0.4.0",
         "elm-test": "^0.19.1-revision7",
         "elm-webpack-loader": "^7.0.1",
+        "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.0.0",
         "postcss": "^8.4.14",
         "postcss-loader": "^7.0.0",
